--- a/unit_1/Index.html
+++ b/unit_1/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Lindsey Allard | Product Manager</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 </head>
 <body>
 	<h1>Hello</h1>
