--- a/unit_1/Index.html
+++ b/unit_1/Index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lindsey Allard | Product Manager</title>
-	<link rel="stylesheet" type="text/css" href="CSS/main.css">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
-	<h1>Hello</h1>
-	<h2>It's me</h2>
-	<p>mario</p>
+	<h1>Lindsey Allard's Pizza</h1>
+	<p>This is the restaurant of Lindsey Allard</p>
 </body>
 </html>
