--- a/LA/index.html
+++ b/LA/index.html
@@ -177,8 +177,8 @@
                 </div>
 
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="/img/LindseyAllardResume.pdf" class="btn btn-lg btn-outline">
-                    <img border="0" src=""/img/LindseyAllardResume.pdf"" >
+                    <a download href="/img/LindseyAllardResume.pdf" class="btn btn-lg btn-outline">
+                    <img border="0" src="/img/LindseyAllardResume.pdf">
                         <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
