Download Resume Working
Updated PDF

--- a/LA/index.html
+++ b/LA/index.html
@@ -207,8 +207,8 @@
                 </div>
 
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a download href="https://www.lindseyallard2.github.io/LA/img/LindseyAllardResume.pdf" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Resume
+                    <a download href="img/lindseyAllardR.pdf" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i>Download Resume
                     </a>
                 </div>
 
