--- a/LA/index.html
+++ b/LA/index.html
@@ -72,7 +72,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/headshot.png" alt="headshot.png">
+                    <img class="img-responsive" src="img/Headshot.png" alt="Headshot.png">
                     <div class="intro-text">
                         <h1 class="name">Lindsey Allard</h1>
                         <hr class="star-light">
