--- a/LA/index.html
+++ b/LA/index.html
@@ -239,15 +239,31 @@
              <br/>
               <br/>
                <br/>
-            Product Management <br/>
-            Strategy Roadmap Creation<br/>
-            Requirements Gathering<br/>
-            Go-to-Market Planning<br/>
-            Digital Marketing<br/>
-            Agile Software Development<br/>
-            Web • Mobile • App<br/>
-            Digital Analytics<br/>
-                
+            • Product Management <br/>
+            • Strategy Roadmap Creation<br/>
+            • Requirements Gathering<br/>
+            • Go-to-Market Planning<br/>
+            • Digital Marketing<br/>
+            • Agile Software Development<br/>
+            • Web • Mobile • App<br/>
+            • Digital Analytics<br/>• JIRA
+            • Agile/Scrum<br/>
+            • Waterfall<br/>
+            • Google Analytics<br/>
+            • Asana<br/>
+            • CRM/Insightly • Microsoft Suite • Salesforce<br/>
+            • Web<br/>
+            • Mobile • SaaS • APIs<br/>
+            • HTML<br/>
+            • CSS<br/>
+            • JavaScript • GitHub<br/>
+            • Responsive Design • SQL/noSQL<br/>
+            • JSON/XML<br/>
+            • AJAX<br/>
+            • DOM<br/>
+            • jQuery<br/>
+            • Prototyping<br/>
+            • Road mapping<br/>
             <br/>
             <br/>
             
