--- a/LA/index.html
+++ b/LA/index.html
@@ -232,6 +232,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                <div class="skils_listed">
                     <h2>Skills</h2>
                     <hr class="star-primary">
                 </div>
@@ -239,31 +240,39 @@
              <br/>
               <br/>
                <br/>
-            • Product Management <br/>
-            • Strategy Roadmap Creation<br/>
-            • Requirements Gathering<br/>
-            • Go-to-Market Planning<br/>
-            • Digital Marketing<br/>
-            • Agile Software Development<br/>
-            • Web • Mobile • App<br/>
-            • Digital Analytics<br/>• JIRA
-            • Agile/Scrum<br/>
-            • Waterfall<br/>
-            • Google Analytics<br/>
-            • Asana<br/>
-            • CRM/Insightly • Microsoft Suite • Salesforce<br/>
-            • Web<br/>
-            • Mobile • SaaS • APIs<br/>
-            • HTML<br/>
-            • CSS<br/>
-            • JavaScript • GitHub<br/>
-            • Responsive Design • SQL/noSQL<br/>
-            • JSON/XML<br/>
-            • AJAX<br/>
-            • DOM<br/>
-            • jQuery<br/>
-            • Prototyping<br/>
-            • Road mapping<br/>
+               <br/>
+               <ul class="skills_listed">
+                    <li>Product Management</li>
+                    <li>Strategy Roadmap Creation</li>
+                    <li>Requirements Gathering</li>
+                    <li>Go-to-Market Planning</li>
+                    <li>Digital Marketing</li>
+                    <li>Agile Software Development</li>
+                    <li>Web • Mobile • App</li>
+                    <li>Digital Analytics</li>
+                    <li>JIRA</li>
+                    <li>Agile/Scrum</li>
+                    <li>Waterfall</li>
+                    <li>Google Analytics</li>
+                    <li>Asana</li>
+                    <li>CRM/Insightly </li>
+                    <li>Microsoft Suite • Salesforce</li>
+                    <li>Web</li>
+                    <li>Mobile • SaaS • APIs</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript </li>
+                    <li>GitHub</li>
+                    <li>Responsive Design • SQL/noSQL</li>
+                    <li>JSON/XML</li>
+                    <li>AJAX</li>
+                    <li>DOM</li>
+                    <li>Prototyping</li>
+                    <li>Road mapping</li>
+                </ul>
+            </div>
+
+            
             <br/>
             <br/>
             
