--- a/LA/index.html
+++ b/LA/index.html
@@ -72,7 +72,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/Headshot.jpg" alt="Headshot.jpg">
+                    <img class="img-responsive" src="img/Headshot.png" alt="Headshot.png">
                     <div class="intro-text">
                         <h1 class="name">Lindsey Allard</h1>
                         <hr class="star-light">
@@ -245,25 +245,25 @@
                     <li>Product Management</li>
                     <li>Strategy Roadmap Creation</li>
                     <li>Requirements Gathering</li>
-                    <li>Go-to-Market Planning</li>
                     <li>Digital Marketing</li>
                     <li>Agile Software Development</li>
-                    <li>Web • Mobile • App</li>
+                    <li>Web</li>
+                    <li>Mobile</li>
                     <li>Digital Analytics</li>
                     <li>JIRA</li>
                     <li>Agile/Scrum</li>
-                    <li>Waterfall</li>
                     <li>Google Analytics</li>
                     <li>Asana</li>
-                    <li>CRM/Insightly </li>
-                    <li>Microsoft Suite • Salesforce</li>
-                    <li>Web</li>
-                    <li>Mobile • SaaS • APIs</li>
+                    <li>CRM/Insightly</li>
+                    <li>Microsoft Suite</li>
+                    <li>SaaS</li>
+                    <li>APIs</li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript </li>
                     <li>GitHub</li>
-                    <li>Responsive Design • SQL/noSQL</li>
+                    <li>Responsive Design</li>
+                    <li>SQL/noSQL</li>
                     <li>JSON/XML</li>
                     <li>AJAX</li>
                     <li>DOM</li>
