--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,9 +5,20 @@
 	<link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body> 
+	<div class="wrapper">
+	<header>
 	<h1>Pizza when you want it how you want it<h1>
 	<img src="Images/pizza.jpg" alt="Pizza" style="width:300px; height:200px;">
+	</header>
+	<nav>
+
+	</nav>
+	<section id="one">
+		<aside class="description">
 	<p>Made in the upper west side with love<p>
+		</aside>
+		</section>
+	<article>
 	<p>toppings include:<P>
 	<div class="toppings">
 		<p>Pepperoni</p>
@@ -18,5 +29,9 @@
 		<p>Green Peppers</p>
 		<p>Olives</p>
 		<p>Argugula</p>
+	</article>
+	<footer>
+
+	</footer>
 </body>
 </html>
