--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Lindsey's Pizza</title>
 	<link rel="stylesheet" type="text/css" href="index.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">mu
 </head>
 <body> 
 	<div class="wrapper">
@@ -41,7 +42,7 @@
 	</article>
 	</section>
 	<footer>
-
+	<img src="Images/multiple_pizzas.jpg" alt="Multiple Pizzas" style="width:55%; height:55%;">
 	</footer>
 </body>
 </html>
